# depsight-dependency-manager

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  versions.env
.devcontainer/: Dockerfile  Dockerfile.test  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  on_dispatch.yml  on_pullrequest.yml  on_release.yml  trivy.yml
docs/: index.md
docs/development/environment/: devcontainer.md  project-setup.md
docs/instructions/getting-started/: getting-started.md
docs/stylesheets/: extra.css
docs/technical-documentation/architecture/: tui-applications.md
docs/technical-documentation/development/: agentic-engineering.md  cli-architecture.md  dev-environment.md  project-overview.md
docs/technical-documentation/integration_and_deployment/: ci_cd.md  containerization.md  distribution.md  packaging.md
docs/technical-documentation/packaging_and_deployment/: packaging.md
instructions/getting-started/getting-started/: index.html
instructions/tasks/task-1-write-a-npm-plugin/: index.html
instructions/tasks/task-2-package-and-publish-your-plugin/: index.html
instructions/tasks/task-3-scan-dependencies/: index.html
search/: search_index.json
src/deply/: cli.py
src/deply/commands/scan/: scan.py  scan_widgets.py
src/deply/core/: run.py
src/deply/core/base_plugins/: base.py
src/deply/core/base_plugins/vsce/: vsce.py
src/deply/core/plugins/: __init__.py  base.py  factory.py
src/deply/core/plugins/uv/: uv.py
src/deply/core/plugins/vsce/: vsce.py
src/deply/utils/: constants.py  logger.py  utils.py
src/depsight/: __init__.py  cli.py
src/depsight/commands/scan/: __init__.py  scan.py  scan_widgets.py  scan_widgets.tcss
src/depsight/core/: dispatcher.py  run.py
src/depsight/core/plugins/: __init__.py  base.py  dependency.py  factory.py
src/depsight/core/plugins/uv/: uv.py
src/depsight/core/plugins/vsce/: vsce.py
src/depsight/utils/: constants.py  logger.py  utils.py
technical-documentation/development/agentic-engineering/: index.html
technical-documentation/development/cli-architecture/: index.html
technical-documentation/development/dev-environment/: index.html
technical-documentation/development/project-overview/: index.html
technical-documentation/integration_and_deployment/ci_cd/: index.html
technical-documentation/integration_and_deployment/containerization/: index.html
technical-documentation/integration_and_deployment/distribution/: index.html
tests/: conftest.py
tests/core/: test_factory.py  test_uv_collect.py  test_vsce_collect.py
tests/fixtures/: devcontainer_no_extensions.json  devcontainer_valid.json  uv_lock_full.toml  uv_lock_no_editable.toml
