[project]
name = "deply"
version = "0.1.0"
description = "A modular dependency analysis framework"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "rich-click>=1.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.scripts]
deply = "deply.cli:main"

# Plugin support
[project.entry-points."deply.plugins"]
uv = "deply.core.plugins.uv.uv:UVPlugin"
vsce = "deply.core.plugins.vsce.vsce:VSCEPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]