[project]
name = "depsight"
version = "1.0.0"
description = "A modular dependency analysis framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Depsight Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "rich-click>=1.7.0",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.scripts]
depsight = "depsight.cli:main"

[project.urls]
Homepage = "https://valentintwin1206.github.io/depsight-dependency-manager/"
Repository = "https://github.com/ValentinTwin1206/depsight-dependency-manager"
Issues = "https://github.com/ValentinTwin1206/depsight-dependency-manager/issues"

# Plugin support
[project.entry-points."depsight.plugins"]
uv = "depsight.core.plugins.uv.uv:UVPlugin"
vsce = "depsight.core.plugins.vsce.vsce:VSCEPlugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
